Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-2290

[c] Proactor: pn_raw_connection_close() doesn't drain already written buffers

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • proton-c-0.33.0
    • None
    • None

    Description

      If you call pn_raw_connection_close() the underlying connection may get closed before all of the buffers already written are written to the connection.

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: