PROTON-2290: Fix pn_raw_connection_close so that it drains anything already written